Tweak font size

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ main {
 
 .card-description {
     margin: 0 2rem 2.5rem 2rem;
-    font-size: 0.8125;
+    font-size: 0.8125rem;
     line-height: 23px;
     letter-spacing: 0.09px;
     opacity: 0.5;
