Tweak font size

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ main {
     text-align: center;
     letter-spacing: 0.1px;
     line-height: 25px;
-    font-size: 0.9375;
+    font-size: 0.9375rem;
     opacity: 0.5;
 }
 
