--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html:focus-within {
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  line-height: 1.5rem;
+  line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
@@ -108,7 +108,7 @@ main {
 .main-description {
     text-align: center;
     letter-spacing: 0.1px;
-    line-height: 25px;
+    line-height: 1.5;
     font-size: 0.9375rem;
     opacity: 0.5;
 }
@@ -143,7 +143,7 @@ main {
 .card-description {
     margin: 0 2rem 2.5rem 2rem;
     font-size: 0.8125rem;
-    line-height: 23px;
+    line-height: 1.4;
     letter-spacing: 0.09px;
     opacity: 0.5;
 }
